--- a/pages/todo.html
+++ b/pages/todo.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo FLow</title>
     <link rel="stylesheet" href="../css/todo.css" />
-    <script defer src="../js/filter.js"></script>
     <script type="module" defer src="../js/todo.js"></script>
+    <script type="module" defer src="../js/filter.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
