Make responsive todopage

--- a/pages/todo.html
+++ b/pages/todo.html
@@ -26,6 +26,7 @@
       <section id="filter-section">
         <div>
           <input
+            placeholder="Select a Date"
             type="date"
             name=""
             id="bydate"
@@ -51,7 +52,6 @@
         </div>
       </section>
     </main>
-    <section id="controls">
       <div class="power-container">
         <a id="logoutBtn" href="#"><i class="fa-solid fa-power-off"></i></a>
       </div>
@@ -59,6 +59,5 @@
         <p>Give a star on</p>
         <a href="https://github.com/pritiranjan-01/Todo-Flow" target="_top"><i class="fa-brands fa-github"></i></a>
       </div>
-    </section>
   </body>
 </html>
